--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-test
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="7; url=https://asdfjkl.github.io/jerry" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://asdfjkl.github.io/jerry">this link</a>.</p>
+  </body>
+</html>
